Fixed the color of input fields for dark mode

--- a/login.scss
+++ b/login.scss
@@ -145,6 +145,11 @@ body.dark-mode .form-container .card h2{
     color: white;
 }
 
+body.dark-mode input.form-control{
+    color: white;
+    background-color: #333;
+}
+
 .theme-toggle {
             background: none;
             border: 1px solid #0f1f3d; 
